@@ -16,8 +16,8 @@ package com.redhat.rhn.frontend.dto;
 
 import org.apache.commons.lang3.StringUtils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 /**
@@ -132,12 +132,7 @@ public class PackageOverview extends BaseDto {
      */
     public String getUrlEncodedPackageName() {
         if (this.packageName != null) {
-            try {
-                return URLEncoder.encode(packageName, "UTF-8");
-            }
-            catch (UnsupportedEncodingException e) {
-                throw new RuntimeException(e);
-            }
+            return URLEncoder.encode(packageName, StandardCharsets.UTF_8);
         }
         return null;
     }
